# portfolio_goteam

./: .dockerignore  .env-template  .gitignore  .gitmodules  Makefile  Procfile  README.md  go.mod  go.sum  goteam.sketch  manage.py  requirements.txt
backend/: Pipfile  db.sqlite3  pyproject.toml  requirements.txt  settings.py
backend/backend/: settings.py  urls.py
backend/main/: helpers.py  models.py  util.py  utilities.py
backend/main/api/: api_auth.py  api_boards.py  api_clientstate.py  api_columns.py  api_subtasks.py  api_tasks.py  api_teams.py  api_users.py  boardsapi.py  clientstateapi.py  loginapi.py  registerapi.py  subtasksapi.py  usersapi.py  util.py
backend/main/api_views/: api_auth.py  api_boards.py  api_columns.py  api_subtask.py  api_subtasks.py  api_tasks.py  boards.py  boardsapiview.py  clientstate.py  clientstateapiview.py  columns.py  columnsapiview.py  login.py  loginapiview.py  register.py  registerapiview.py  subtasks.py  subtasksapiview.py  users.py  usersapiview.py
backend/main/data/: tutorial_tasks.json
backend/main/helpers/: auth_helper.py  tutorial_helper.py  user_helper.py
backend/main/migrations/: 0015_auto_20210430_1059.py
backend/main/serializers/: boardserializer.py  clientstateserializer.py  createboardserializer.py  deleteboardserializer.py  deleteuserserializer.py  loginserializer.py  ser_auth.py  ser_board.py  ser_subtask.py  ser_task.py  ser_user.py  subtaskserializer_update.py  updateboardserializer.py  updatesubtaskserializer.py  updateuserserializer.py  userserializer.py  userserializer_register.py
goteam/: urls.py  (+2 more)
(+1209 files in other folders)
